k8s/apps/sewing-assistant/authentik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost
  namespace: sewing-assistant
spec:
  type: ExternalName
  externalName: authentik-server.authentik.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
